--- a/20240310_CrystalStructurePrediction/cryspy.in
+++ b/20240310_CrystalStructurePrediction/cryspy.in
@@ -2,7 +2,7 @@
 algo = RS
 calc_code = ASE
 tot_struc = 4
-nstage = 1
+nstage = 2
 njob = 2
 jobcmd = sh
 jobfile = job_cryspy
@@ -14,6 +14,7 @@ atype = B C N H O F
 nat = 2 38 6 36 4 4
 mol_file = ./init.xyz
 nmol = 2
+spgnum = 14 2 15 19 4 61 33 9 62 1 5 60 148 29 13
 
 [ASE]
 ase_python = ase_in.py
